[package]
name = "NocturaDE_compositor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.69"
serde = { version = "1.0.156", features = ["derive"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
toml = "0.7.3"
xcursor = "0.3.4"
calloop = "0.14.4"
wayland-server = "0.31.13"

[dependencies.smithay]
version = "0.7"
git = "https://github.com/smithay/smithay.git"
rev = "a166cf4"
